<resources>
    <string name="app_name">To Do list</string>
    <string name="text_title">Tarefas</string>
    <string name="text_hint_titulo">Título</string>
    <string name="text_hint_description">Descrição</string>
    <string name="text_hint_data">Data</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_criar">Criar Tarefa</string>
    <string name="text_hint_hora">Hora</string>
    <string name="description_nova_tarefa">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\nnenhum tarefa</string>
</resources>